Processing of NLA stripes when moved incomplete #81533

Closed
opened 2020-10-08 10:48:54 +02:00 by Meino Cramer · 15 comments

System Information
Operating system: GENTOO Linux, (driver: NVIDIA-Linux-x86_64-455.28 for graphics card)
Graphics card: NVIDIA Corporation TU106 [GeForce RTX 2060 SUPER] (rev a1)

Blender Version
Broken: at least blender-2.91.0-d8fcd8a3162f-linux64, blender-2.90.1-linux64
Worked: not known

Short description of error
frame range restricted FCurve modifier are not updated, when NLA strip is moved

Exact steps for others to reproduce the error
Animate default cube for the range of 100 frames
Go NLA editor
"accept" NLA stripe (sorry...I am no native speaker...I mean: Make it "real" (yellow instead of orange).
Go tweak mode
add modifier to one of the fcurves
restrict frame range to 100 frames (so it effcts the size of the NLA stripe)
leave tweak mode
move NLA stripe 100 frames in x direction, accept with RETURN
go Tweak mode:
The range of the restriction of the modifier is not moved according to the stripe movement, instead it is "left behind".
Sync and apply Scale does not fix this.
This creates a lot of extra work to fix each of the modifiers range settings by hand and is error prone when it comes
to more complex animations.

(I cannot "drop files"...I use an window manager only...I would like to ask for an "upload file" bottom, which opens
a filebrowser... :) )

**System Information** Operating system: GENTOO Linux, (driver: NVIDIA-Linux-x86_64-455.28 for graphics card) Graphics card: NVIDIA Corporation TU106 [GeForce RTX 2060 SUPER] (rev a1) **Blender Version** Broken: at least blender-2.91.0-d8fcd8a3162f-linux64, blender-2.90.1-linux64 Worked: not known **Short description of error** frame range restricted FCurve modifier are not updated, when NLA strip is moved **Exact steps for others to reproduce the error** Animate default cube for the range of 100 frames Go NLA editor "accept" NLA stripe (sorry...I am no native speaker...I mean: Make it "real" (yellow instead of orange). Go tweak mode add modifier to one of the fcurves restrict frame range to 100 frames (so it effcts the size of the NLA stripe) leave tweak mode move NLA stripe 100 frames in x direction, accept with RETURN go Tweak mode: The range of the restriction of the modifier is not moved according to the stripe movement, instead it is "left behind". Sync and apply Scale does not fix this. This creates a lot of extra work to fix each of the modifiers range settings by hand and is error prone when it comes to more complex animations. (I cannot "drop files"...I use an window manager only...I would like to ask for an "upload file" bottom, which opens a filebrowser... :) )
Author

Added subscriber: @mcq

Added subscriber: @mcq
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

It would actually be good to have an example file (this just makes it easier if multiple people are having a look here, and ensures we are all on the same page)

You can use this button:
image.png

It would actually be good to have an example file (this just makes it easier if multiple people are having a look here, and ensures we are all on the same page) You can use this button: ![image.png](https://archive.blender.org/developer/F8971329/image.png)
Author

Here it comes... :)
Load the file into blender
Select the NLA stripe
Go into tweak mode ()
In the graph editor window there is a fcurve displayed.
This fcurve has a nois emodifier which restricted frame range (0...250)
Leave tweak mode
Move the NLA-stripe 250 frames right ( g 205 )
Go tweak mode
Now the fcurve has moved 250 frames to the right, starting 250, ending 500
But the modifier still influences the range of 0...250, which is not exspected.
"Apply Scale" and "Sync Action length" do not change this.
anim.blend

Here it comes... :) Load the file into blender Select the NLA stripe Go into tweak mode (<TAB>) In the graph editor window there is a fcurve displayed. This fcurve has a nois emodifier which restricted frame range (0...250) Leave tweak mode Move the NLA-stripe 250 frames right ( g 205 <return> ) Go tweak mode Now the fcurve has moved 250 frames to the right, starting 250, ending 500 But the modifier still influences the range of 0...250, which is not exspected. "Apply Scale" and "Sync Action length" do not change this. [anim.blend](https://archive.blender.org/developer/F8971679/anim.blend)
Philipp Oeser self-assigned this 2020-10-11 10:43:51 +02:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

More of a TODO (not a bug), but will have a look next week

More of a TODO (not a bug), but will have a look next week
Member

Added subscriber: @wbmoss_dev

Added subscriber: @wbmoss_dev
Author

Some dependencies:
Currently it is possible to render negative frames with Eevee only ( https://developer.blender.org/T81534 ).
If an animation created this way and checked subsequently with Eevee for faster turnaround times should
be "ported" to cycles, one has to go through all NLA stripes and for any curve one has to fix the restricted
frame ranges by hand.

Some dependencies: Currently it is possible to render negative frames with Eevee only ( https://developer.blender.org/T81534 ). If an animation created this way and checked subsequently with Eevee for faster turnaround times should be "ported" to cycles, one has to go through all NLA stripes and for any curve one has to fix the restricted frame ranges by hand.
Member

It seems that the NLA evaluates fmodifiers just fine. It appears to be an fcurve rendering bug where the noise modifier isn't drawn based on the NLA time remapping.

It seems that the NLA evaluates fmodifiers just fine. It appears to be an fcurve rendering bug where the noise modifier isn't drawn based on the NLA time remapping.
Philipp Oeser removed their assignment 2020-11-02 16:39:04 +01:00
Member

Will step down to not block others from looking at this

Will step down to not block others from looking at this
Author

After applying scale to the NLA-strip after it has been moved even destroys correct rendering.
In my opinion this should be rated as bug.

After applying scale to the NLA-strip after it has been moved even destroys correct rendering. In my opinion this should be rated as bug.
Wayde Moss self-assigned this 2021-01-04 21:25:36 +01:00

This issue was referenced by 40d391fa60

This issue was referenced by 40d391fa6068cf56765bfd187c68275f3bfe06e9

This issue was referenced by 30dd31a7b3

This issue was referenced by 30dd31a7b3d85d79398c193ded77449a78568d67
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81533
No description provided.